# fast-auth

./: .dockerignore  .gitignore  ADR-auth0-jwt-security.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qodana.yaml  turbo.json
contracts/: Cargo.toml  rustfmt.toml
contracts/attestation/: Cargo.toml  README.md  package.json
contracts/attestation/src/: lib.rs
contracts/attestation/tests/: test_integration.rs
contracts/auth0-guard/: Cargo.toml  README.md  package.json
contracts/auth0-guard/src/: lib.rs
contracts/auth0-guard/tests/: test_integration.rs
contracts/fa/: Cargo.toml  README.md  package.json
contracts/fa-guard/: Cargo.toml  README.md
contracts/fa-guard-jwt/: Cargo.toml  README.md  package.json
contracts/fa-guard-jwt-rs256/: Cargo.toml  README.md
contracts/fa-guard-jwt-rs256/src/: jwt.rs  lib.rs
contracts/fa-guard-jwt-rs256/tests/: test_integration.rs
contracts/fa-guard-jwt/src/: claims.rs  interfaces.rs  lib.rs
contracts/fa-guard-jwt/tests/: test_basics.rs  test_integration.rs
contracts/fa-guard/src/: interfaces.rs  lib.rs
contracts/fa-guard/tests/: test_basics.rs  test_integration.rs
contracts/fa-permissions/: Cargo.toml  README.md
contracts/fa-permissions/src/: lib.rs  permission.rs
contracts/fa-permissions/tests/: test_basics.rs
contracts/fa/.cargo/: config.toml
contracts/fa/src/: external_contracts.rs  lib.rs  (+1 more)
contracts/firebase-guard/: Cargo.toml  README.md  package.json
contracts/jwt-guard/: Cargo.toml  package.json
contracts/jwt-guard-router/: Cargo.toml  README.md  package.json
(+535 files in other folders)
