[package]
name = "jwt-guard-router"
description = "jwt-guard-router"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Peersyst/fast-auth"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.9"

[dev-dependencies]
near-sdk = { version = "5.9", features = ["unit-testing"] }
near-workspaces = { version = "0.18", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
